--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+  <section class="header">
+    <div class="logo-title">
+      <h2>Mode change</h2>
+    </div>
+    <img src="./img/images/moon.png" id="icon">
+  </section>
+  <main>
+    <h1>Day and Night</h1>
+  </main>
 
   <script src="index.js"></script>
 </body>
